# triangle-splatting

./: .gitignore  README.md  index.html  requirements.txt  run_experiments.py  script.js  setup.py  style.css  viser_viewer.py
assets/ficus/: 2dgs.ply  2dts.glb
assets/ship/: ground_truth.mtl
config/: MatrixCity_VanillaTS_mesh.yaml  MipNerf360_VanillaTS.yaml  NerfSynthetic_VanillaTS.yaml  NerfSynthetic_VanillaTS_mesh.yaml  TanksAndBlending_VanillaTS.yaml
src/diff_recon/: __init__.py
src/diff_recon/datasets/: Base_dataset.py  Colmap_dataset.py  MatrixCity_dataset.py  NerfSynthetic_dataset.py  Qijing_dataset.py  colmap_loader.py
src/diff_recon/models/: Base_model.py  ScaffoldGS_model.py  VanillaGS_model.py  VanillaTS_model.py  model_utils.py  point_cloud.py  raw_gaussian.py  raw_triangle.py
src/diff_recon/renderer/: gaussian_renderer.py  kaolin_renderer.py  render_utils.py  triangle_renderer.py
src/diff_recon/trainers/: Base_trainer.py  ScaffoldGS_trainer.py  VanillaGS_trainer.py  VanillaTS_trainer.py  trainer_utils.py
src/diff_recon/utils/: camera.py  config.py  file_handler.py  io_utils.py  logger.py  pipeline_utils.py  scheduler.py  sh_utils.py  timer.py  vis_utils.py
submodules/custom-gaussian-rasterization/: .gitignore  LICENSE  ext.cpp  rasterize_points.cu  rasterize_points.h  setup.py
submodules/custom-gaussian-rasterization/cuda_rasterizer/: auxiliary.h  backward.cu  backward.h  forward.cu  forward.h  rasterizer.h  rasterizer_impl.cu
submodules/custom-gaussian-rasterization/custom_gaussian_rasterization/: __init__.py
submodules/diff-triangle-rasterization-2D/: CMakeLists.txt  ext.cpp  main.cu  setup.py
submodules/diff-triangle-rasterization-2D/diff_triangle_rasterization_2D/: __init__.py
submodules/diff-triangle-rasterization-2D/src/: auxiliary.h  backward.cu  backward.h  config.h  extension_interface.cu  forward.cu  forward.h  param_struct.h  rasterizer.cu
submodules/diff-triangle-rasterization-3D/: .gitignore  CMakePresets.json  setup.py
submodules/diff-triangle-rasterization-3D/diff_triangle_rasterization_3D/: __init__.py
submodules/diff-triangle-rasterization-3D/src/: auxiliary.h  backward.cu  backward.h  config.h  extension_interface.cu  extension_interface.h  forward.cu  forward.h  param_struct.h  rasterizer.cu  rasterizer.h
submodules/simple-knn/: CMakeLists.txt  auxiliary.h  ext.cpp  interface.cu  interface.h  main.cu  setup.py  simple_knn.cu  simple_knn.h
submodules/simple-knn/simple_knn/: __init__.py
