cmake_minimum_required(VERSION 3.31)

project(SimpleKNN LANGUAGES CUDA CXX)

# set(CMAKE_CUDA_COMPILER nvcc)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CUDA_STANDARD 17)
set(CMAKE_CUDA_FLAGS "-g -G")
set(CMAKE_CXX_FLAGS "-g -Wall -Wextra -pedantic")

add_executable(simple_knn main.cu)
target_sources(simple_knn PUBLIC interface.cu simple_knn.cu)

set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(simple_knn PRIVATE Threads::Threads)

find_package(CUDAToolkit REQUIRED)
if (CUDAToolkit_FOUND)
	message(STATUS "CUDA found: ${CUDAToolkit_VERSION}")
	message(STATUS "CUDA include dirs: ${CUDAToolkit_INCLUDE_DIRS}")
	message(STATUS "CUDA libraries: ${CUDAToolkit_LIBRARIES}")
	target_include_directories(simple_knn PRIVATE ${CUDAToolkit_INCLUDE_DIRS})
	target_link_libraries(simple_knn PRIVATE ${CUDAToolkit_LIBRARIES})
else()
	message(FATAL_ERROR "CUDA not found. Install CUDA.")
endif()

find_package(Torch REQUIRED)
if (Torch_FOUND)
	message(STATUS "Torch found: ${TORCH_VERSION}")
	message(STATUS "Torch include dirs: ${TORCH_INCLUDE_DIRS}")
	message(STATUS "Torch libraries: ${TORCH_LIBRARIES}")
	target_include_directories(simple_knn PRIVATE ${TORCH_INCLUDE_DIRS})
	target_link_libraries(simple_knn PRIVATE ${TORCH_LIBRARIES})
else()
	message(FATAL_ERROR "Torch not found. Install PyTorch.")
endif()

find_package(Python3 COMPONENTS Development REQUIRED)
if (Python3_FOUND)
    message(STATUS "Python3 found: ${Python3_VERSION}")
	message(STATUS "Python3 include dirs: ${Python3_INCLUDE_DIRS}")
	message(STATUS "Python3 libraries: ${Python3_LIBRARIES}")
    target_include_directories(simple_knn PRIVATE ${Python3_INCLUDE_DIRS})
    target_link_libraries(simple_knn PRIVATE ${Python3_LIBRARIES})
else()
    message(FATAL_ERROR "Python3 not found. Install Python development headers.")
endif()

# set_target_properties(simple_knn PROPERTIES CUDA_ARCHITECTURES "70;75;86")
set_property(TARGET simple_knn PROPERTY CUDA_SEPARABLE_COMPILATION ON)

target_compile_options(simple_knn PRIVATE -G)